--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 isolated_build = True
-envlist = py37, py38, py39, py310
+envlist = py38, py39, py310
 
 [testenv]
 extras = test
@@ -9,4 +9,4 @@ deps =
 
 commands =
     poetry install -v
-    poetry run pytest --pyargs scmodels {posargs}
+    poetry run pytest --pyargs cfrainbow {posargs}
