--- a/.github/workflow/python.yml
+++ b/.github/workflow/python.yml
@@ -74,8 +74,8 @@ jobs:
           poetry run tox -e py${{ matrix.config.tox }} -- -n auto
         env:
           PATH: "$HOME/.poetry/bin:$PATH"
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: unittests
