--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,10 +3,15 @@ name: Python CI
 on:
   pull_request:
     branches: '**'
+  push:
+    branches: '**'
 
 jobs:
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ 'macos-latest', 'ubuntu-20.04', 'ubuntu-18.04' ]
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -21,6 +26,7 @@ jobs:
         uses: pre-commit/action@v2.0.0
         with:
           extra_args: --all-files
+
   test:
     needs:
       - lint
@@ -37,7 +43,7 @@ jobs:
         os: [ 'macos-latest', 'ubuntu-20.04', 'ubuntu-18.04' ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up testing Python ${{ matrix.config.python-version }}
         uses: actions/setup-python@v2
         with:
@@ -54,13 +60,13 @@ jobs:
           installer-parallel: false
       - name: Load cached virtual env
         id: cached-poetry-dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: .venv
           key: venv-${{ matrix.os }}-python-${{ matrix.config.python-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Load cached tox
         id: cached-tox-dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: .tox
           key: tox-${{ matrix.os }}-python-${{ matrix.config.python-version }}-${{ hashFiles('**/poetry.lock') }}
@@ -69,13 +75,14 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         env:
           PATH: "$HOME/.poetry/bin:$PATH"
-      - name: Run tox
+      - name: Run tox with coverage
         run: |
-          poetry run tox -e py${{ matrix.config.tox }} -- -n auto
+          poetry run tox -e py${{ matrix.config.tox }} -- -n auto --cov=.
         env:
           PATH: "$HOME/.poetry/bin:$PATH"
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        if: secrets.CODECOV_TOKEN
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: unittests
