correct formatting with black config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,14 +59,18 @@ pytest-cov = "*"
 
 
 [tool.black]
+include = '\.pyi?$'
 exclude = '''
 /(
-    \.git
+    \.eggs
+  | \.git
   | \.hg
   | \.mypy_cache
+  | \.nox
   | \.tox
   | \.venv
   | _build
+  | buck-out
   | build
   | dist
 )/
