--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -8,10 +8,7 @@ on:
 
 jobs:
   lint:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ 'macos-latest', 'ubuntu-20.04', 'ubuntu-18.04' ]
+    runs-on: 'ubuntu-latest'
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -40,7 +37,7 @@ jobs:
             tox: 39
           - python-version: '3.10'
             tox: 310
-        os: [ 'macos-latest', 'ubuntu-20.04', 'ubuntu-18.04' ]
+        os: [ 'macos-latest', 'ubuntu-20.04', 'ubuntu-22.04' ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
