--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -32,19 +32,22 @@ jobs:
       matrix:
         config:
           - python-version: 3.8
-            tox: 38
+            tox: py38
           - python-version: 3.9
-            tox: 39
+            tox: py39
           - python-version: '3.10'
-            tox: 310
+            tox: py310
         os: [ 'macos-latest', 'ubuntu-20.04', 'ubuntu-22.04' ]
     runs-on: ${{ matrix.os }}
+    name: Py ${{ matrix.config.python-version }} tests (${{ matrix.os }})
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up testing Python ${{ matrix.config.python-version }}
-        uses: actions/setup-python@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.config.python-version }}
+        uses: actions/setup-python@v4
         with:
-          architecture: x64
+          python-version: ${{ matrix.config.python-version }}
 
       - name: Update pip
         run: |
@@ -87,17 +90,19 @@ jobs:
         if: matrix.os != 'macos-latest' && steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         uses: egor-tensin/setup-clang@v1
         with:
-          llvm-version: '15.0.0'
+          version: '15'
 
       - name: Install dependencies
-        run: poetry install
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         env:
           PATH: "$HOME/.poetry/bin:$PATH"
+          CC: clang
+          CXX: clang++
+        run: poetry install --with dev
 
       - name: Run tox with coverage
         run: |
-          tox -e py${{ matrix.config.tox }} -- -n auto --cov=.
+          poetry run tox -e ${{ matrix.config.tox }} -- -- -n auto --cov=.
         env:
           PATH: "$HOME/.poetry/bin:$PATH"
 
