--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -80,18 +80,18 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         with:
           cmake-version: '3.25'
-
-      - name: Install Clang
-        if: matrix.os == 'macos-latest' && steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: |
-          brew update
-          brew install llvm
-
-      - name: Setup Clang via Marketplace
-        if: matrix.os != 'macos-latest' && steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        uses: egor-tensin/setup-clang@v1
-        with:
-          version: '15'
+#
+#      - name: Install Clang
+#        if: matrix.os == 'macos-latest' && steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+#        run: |
+#          brew update
+#          brew install llvm
+#
+#      - name: Setup Clang via Marketplace
+#        if: matrix.os != 'macos-latest' && steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+#        uses: egor-tensin/setup-clang@v1
+#        with:
+#          version: '15'
 
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
