--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,12 +26,6 @@ repos:
       - id: requirements-txt-fixer
       - id: trailing-whitespace
 
-  # Sort includes
-  - repo: https://github.com/PyCQA/isort
-    rev: "5.12.0"
-    hooks:
-      - id: isort
-
   # Check for common mistakes
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: "v1.10.0"
@@ -41,6 +35,14 @@ repos:
       - id: python-no-log-warn
       - id: python-no-eval
       - id: python-use-type-annotations
+
+  # Sort includes
+  - repo: https://github.com/PyCQA/isort
+    rev: "5.12.0"
+    hooks:
+      - id: isort
+        args: ["--profile", "black"]
+
 
   # Format Python code
   -   repo: https://github.com/psf/black
