--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,6 +6,10 @@ on:
   push:
     branches: '**'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   lint:
     runs-on: 'ubuntu-latest'
@@ -29,7 +33,7 @@ jobs:
     needs:
       - lint
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         config:
           - python-version: 3.8
@@ -38,7 +42,7 @@ jobs:
             tox: py39
           - python-version: '3.10'
             tox: py310
-        os: [ 'macos-latest', 'ubuntu-20.04', 'ubuntu-22.04' ]
+        os: [ 'macos-latest', 'ubuntu-latest']
     runs-on: ${{ matrix.os }}
     name: Py ${{ matrix.config.python-version }} tests (${{ matrix.os }})
     steps:
